--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>gulimall-order</module>
         <module>gulimall-product</module>
         <module>gulimall-ware</module>
+        <module>renren-fast</module>
     </modules>
     <url/>
     <licenses>
